style(buttons): attempt to fix display (so doesn't linebreak in button)

--- a/css/cardslider.css
+++ b/css/cardslider.css
@@ -41,8 +41,8 @@
 .card-list .card-item .message-button {
   display: inline-flex;
   align-items: center;
-  white-space: nowrap;
   gap: 0.5rem;
+  min-width: 130px;
   margin-top: 10px;
   padding: 10px 35px;
   color: rgba(252, 252, 249, 1);
